--- a/Wrapsy/app/src/main/res/values/strings.xml
+++ b/Wrapsy/app/src/main/res/values/strings.xml
@@ -58,6 +58,7 @@
 
     <!-- Pantalla de invitaciones y links-->
     <string name="cancel_btn">Cancel</string>
+    <string name="invite_friend">Invite a friend</string>
 
     <!-- Pantalla order-->
     <string name="details">Details</string>
@@ -89,4 +90,10 @@
     <string name="store_balloons">Balloons ></string>
     <string name="store_plush_toys">Plush toys ></string>
     <string name="store_mugs">Mugs ></string>
+
+    <string name="basket_total_gift">Anastasia Beverly Hills</string>
+    <string name="basket_total_desc">Lip velvet liquid lipstick</string>
+    <string name="basket_total_total">$740</string>
+    <string name="basket_total_finale">Total: $740</string>
+
 </resources>
